--- a/index.html
+++ b/index.html
@@ -1,22 +1,37 @@
-<!DOCTYPE html>
+
+<!doctype html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
+    <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Check-in Success</title>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <title>Check-in Page Mock</title>
     <link rel="stylesheet" href="style.css" />
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div class="container">
-        <div class="checkin-card">
-            <button class="close-btn">
-                <img src="assets/close.png" alt="">
-            </button>
+    <div class="phone">
+        <div class="pattern"></div>
 
+        <div class="top-actions">
+            <div class="round-btn" aria-label="Close">
+                <!-- X icon -->
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                    <path
+                        d="M18.3 5.7a1 1 0 0 0-1.4 0L12 10.6 7.1 5.7a1 1 0 1 0-1.4 1.4l4.9 4.9-4.9 4.9a1 1 0 1 0 1.4 1.4l4.9-4.9 4.9 4.9a1 1 0 0 0 1.4-1.4L13.4 12l4.9-4.9a1 1 0 0 0 0-1.4z" />
+                </svg>
+            </div>
+
+            <div class="round-btn" aria-label="Share">
+                <!-- share icon -->
+                <svg viewBox="0 0 24 24" aria-hidden="true">
+                    <path
+                        d="M18 16a3 3 0 0 0-2.4 1.2l-6-3.2a3.2 3.2 0 0 0 0-1.9l6-3.2A3 3 0 1 0 15 6a3 3 0 0 0 .1.7l-6 3.2A3 3 0 1 0 9 14a3 3 0 0 0-.1.7l6 3.2A3 3 0 1 0 18 16z" />
+                </svg>
+            </div>
+        </div>
+
+        <div class="card">
             <div class="profile-wrapper">
                 <div class="image-circle">
 
@@ -30,60 +45,74 @@
                     <svg class="ring ring--dots" viewBox="0 0 125 125">
                         <circle cx="62.5" cy="62.5" r="59.5" />
                     </svg>
+                </div>
+            </div>
 
+            <div class="header">
+                <h1 class="title"> <span class="titleVal">Behzad Chizari</span> • 873334992</h1>
+                <p class="subtitle">Check-in: Dec 20, 13:14 · 00:00:18</p>
+            </div>
 
-                    <div class="check-icon">
-                        <img src="assets/checked.png" alt="">
+            <div class="rows">
+                <div class="row">
+                    <div class="left">
+                        <div class="icon" aria-hidden="true">
+                            <!-- location pin -->
+                            <svg viewBox="0 0 24 24">
+                                <path
+                                    d="M12 2a7 7 0 0 0-7 7c0 5.3 7 13 7 13s7-7.7 7-13a7 7 0 0 0-7-7zm0 9.5A2.5 2.5 0 1 1 12 6a2.5 2.5 0 0 1 0 5.5z" />
+                            </svg>
+                        </div>
+                        <div class="label">Venue</div>
                     </div>
+                    <div class="value">Holmes Place am Seestern</div>
+                </div>
+
+                <div class="row">
+                    <div class="left">
+                        <div class="icon" aria-hidden="true">
+                            <!-- clipboard icon -->
+                            <svg viewBox="0 0 24 24">
+                                <path
+                                    d="M16 4h-1.2A3 3 0 0 0 12 2a3 3 0 0 0-2.8 2H8a2 2 0 0 0-2 2v14a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2V6a2 2 0 0 0-2-2zm-4-1a1 1 0 0 1 1 1h-2a1 1 0 0 1 1-1zm4 17H8V6h1.5v1h5V6H16v14z" />
+                            </svg>
+                        </div>
+                        <div class="label">Activity</div>
+                    </div>
+                    <div class="value">Fitness</div>
+                </div>
+
+                <div class="row">
+                    <div class="left">
+                        <div class="icon" aria-hidden="true">
+                            <!-- tag icon -->
+                            <svg viewBox="0 0 24 24">
+                                <path
+                                    d="M20.6 13.4 12 22 2 12l8.6-8.6A2 2 0 0 1 12 3h6a2 2 0 0 1 2 2v6a2 2 0 0 1-.6 1.4zM17.5 8A1.5 1.5 0 1 0 16 6.5 1.5 1.5 0 0 0 17.5 8z" />
+                            </svg>
+                        </div>
+                        <div class="label">Category</div>
+                    </div>
+                    <div class="value">Fitness</div>
                 </div>
             </div>
-
-            <h2>Check-in successful</h2>
-            <h1 class="name">Behzad Chizari</h1>
-            <p class="member-id">873334992</p>
-
-            <div class="section">
-                <span class="label">Fitness</span>
-                <p class="location">Holmes Place am Seestern</p>
-            </div>
-
-            <div class="section checkin-time">
-                <span>Checked-in at</span>
-                <div class="time-row">
-                    <span>Jun 5, 21:02</span>
-                    <span class="clock-icon"><img class="clock-icon" src="assets/clock.png" alt=""> <span></span></span>
-                </div>
-            </div>
-
-            <button class="share-btn">
-                <img src="assets/share.png" alt="">
-            </button>
         </div>
 
-        <div class="box">
-            <div class="spec">
-                <h3>Fitness</h2>
-                    <h3 class="title">Holmes Place am Seestern</h2>
-                        <img src="assets/checkin.png" alt="">
-            </div>
-            <div class="view-btn">
-                <a href=""> View</a>
-            </div>
-        </div>
-
-        <div class="bottom-nav">
-            <div class="nav-item"><i class="fas fa-map-marker-alt"></i> Venues</div>
-            <div class="nav-item"><i class="fas fa-dumbbell"></i> Classes</div>
-            <div class="nav-item active"><i class="fas fa-qrcode"></i> Check-in</div>
-            <div class="nav-item"><i class="fas fa-user"></i> Profile</div>
-        </div>
     </div>
 
+    <!-- ✅ Added scripts: persistence for edits via localStorage -->
     <script>
+        // ---------- Storage keys ----------
+        const STORAGE_KEYS = {
+            title: 'checkin_title',
+            venue: 'checkin_venue',
+            photo: 'checkin_photo_dataurl',
+            startTs: 'checkin_start_ts'
+        };
 
-        // Format date in "Jun 27 21:05" (24-hour)
-        function updateCurrentDateTime() {
-            const now = new Date();
+        // ---------- Helpers ----------
+        // Format date like the provided example: "Jan 12 19:25" (24h, no comma)
+        function formatDateLikeExample(date) {
             const options = {
                 month: 'short',
                 day: 'numeric',
@@ -91,107 +120,153 @@
                 minute: '2-digit',
                 hour12: false
             };
-            const formatted = now.toLocaleString('en-US', options).replace(',', '');
-            document.querySelector('.time-row span:first-child').textContent = formatted;
+            return date.toLocaleString('en-US', options).replace(',', '');
         }
 
-        // Start count-up timer from 0 seconds
-        function startCountUpTimer() {
-            const counterSpan = document.querySelector('.clock-icon span');
-            let seconds = 0;
-            setInterval(() => {
-                seconds++;
-                counterSpan.textContent = seconds;
+        // Format seconds as "HH:MM:SS"
+        function formatHMS(totalSeconds) {
+            const h = Math.floor(totalSeconds / 3600).toString().padStart(2, '0');
+            const m = Math.floor((totalSeconds % 3600) / 60).toString().padStart(2, '0');
+            const s = Math.floor(totalSeconds % 60).toString().padStart(2, '0');
+            return `${h}:${m}:${s}`;
+        }
+
+        // ---------- Date & Timer with persistence ----------
+        let timerId = null;
+        let pinnedDateText = '';
+        let startTs = null; // epoch ms
+
+        function initCheckinTime() {
+            const subtitleEl = document.querySelector('.subtitle');
+            if (!subtitleEl) return;
+
+            // Restore or set the start timestamp
+            const savedTs = localStorage.getItem(STORAGE_KEYS.startTs);
+            if (savedTs) {
+                startTs = parseInt(savedTs, 10);
+            } else {
+                startTs = Date.now();
+                localStorage.setItem(STORAGE_KEYS.startTs, String(startTs));
+            }
+
+            // Pin the date to the saved start time (stable across refresh)
+            pinnedDateText = formatDateLikeExample(new Date(startTs));
+
+            // Compute current elapsed based on now - startTs
+            let elapsedSeconds = Math.max(0, Math.floor((Date.now() - startTs) / 1000));
+            subtitleEl.textContent = `Check-in: ${pinnedDateText} · ${formatHMS(elapsedSeconds)}`;
+
+            // Start/refresh the interval
+            if (timerId) clearInterval(timerId);
+            timerId = setInterval(() => {
+                elapsedSeconds++;
+                subtitleEl.textContent = `Check-in: ${pinnedDateText} · ${formatHMS(elapsedSeconds)}`;
             }, 1000);
         }
 
-        // Allow user to change name via <h1> click
-        function enableNameEditing() {
-            const nameElement = document.querySelector('h1.name');
+        // ---------- Title editing (click to change) with persistence ----------
+        function enableTitleEditing() {
+            const titleEl = document.querySelector('span.titleVal');
+            if (!titleEl) return;
 
-            if (nameElement) {
-                nameElement.style.cursor = 'pointer';
-                nameElement.addEventListener('click', () => {
-                    const newName = prompt('Enter your name:');
-                    if (newName) {
-                        nameElement.textContent = newName;
-                    }
-                });
-            }
+            // Restore saved title
+            const savedTitle = localStorage.getItem(STORAGE_KEYS.title);
+            if (savedTitle) titleEl.textContent = savedTitle;
+
+            titleEl.style.cursor = 'pointer';
+            titleEl.title = 'Click to edit title';
+
+            titleEl.addEventListener('click', () => {
+                const current = titleEl.textContent.trim();
+                const next = prompt('Enter new title (e.g., Name • MemberID):', current);
+                if (next && next.trim()) {
+                    const clean = next.trim();
+                    titleEl.textContent = clean;
+                    localStorage.setItem(STORAGE_KEYS.title, clean);
+                }
+            });
         }
 
-        // Allow user to select an image file and preview it
+        // ---------- Profile image upload (click the image) with persistence ----------
         function enableProfileImageUpload() {
-            const profileImage = document.querySelector('.image-circle img');
-            if (!profileImage) return;
+            const profileImg = document.querySelector('.image-circle img');
+            if (!profileImg) return;
 
-            profileImage.style.cursor = 'pointer';
+            // Restore saved photo
+            const savedPhoto = localStorage.getItem(STORAGE_KEYS.photo);
+            if (savedPhoto) profileImg.src = savedPhoto;
 
-            // Create hidden file input
+            profileImg.style.cursor = 'pointer';
+            profileImg.title = 'Click to change photo';
+
             const fileInput = document.createElement('input');
             fileInput.type = 'file';
             fileInput.accept = 'image/*';
             fileInput.style.display = 'none';
             document.body.appendChild(fileInput);
 
-            profileImage.addEventListener('click', () => {
+            profileImg.addEventListener('click', () => {
                 fileInput.click();
             });
 
-            fileInput.addEventListener('change', (event) => {
-                const file = event.target.files[0];
-                if (file) {
-                    const reader = new FileReader();
-                    reader.onload = function (e) {
-                        profileImage.src = e.target.result;
-                    };
-                    reader.readAsDataURL(file);
-                }
-            });
-        }
+            fileInput.addEventListener('change', (evt) => {
+                const file = evt.target.files && evt.target.files[0];
+                if (!file) return;
 
-        // Fullscreen request (runs only once after first user interaction)
-        function setupFullscreenTrigger() {
-            function requestFullscreen() {
-                const elem = document.documentElement;
-                if (elem.requestFullscreen) {
-                    elem.requestFullscreen();
-                } else if (elem.webkitRequestFullscreen) {
-                    elem.webkitRequestFullscreen();
-                } else if (elem.msRequestFullscreen) {
-                    elem.msRequestFullscreen();
-                }
-            }
-
-            document.addEventListener('click', function handleFirstClick() {
-                requestFullscreen();
-                document.removeEventListener('click', handleFirstClick);
-            });
-        }
-
-        function enableLocationEditing() {
-            const locationElements = document.querySelectorAll('.location, .title');
-            const triggerElement = document.querySelector('.location');
-
-            if (triggerElement) {
-                triggerElement.style.cursor = 'pointer';
-                triggerElement.addEventListener('click', () => {
-                    const newLocation = prompt("Enter new location name:");
-                    if (newLocation) {
-                        locationElements.forEach(el => el.textContent = newLocation);
+                const reader = new FileReader();
+                reader.onload = (e) => {
+                    const dataUrl = e.target.result;
+                    profileImg.src = dataUrl;
+                    try {
+                        localStorage.setItem(STORAGE_KEYS.photo, dataUrl);
+                    } catch (err) {
+                        console.warn('Saving photo to localStorage failed (size may be too large):', err);
                     }
-                });
-            }
+                };
+                reader.readAsDataURL(file);
+            });
         }
 
-        // Initialize all functions on DOM load
+        // ---------- Venue editing (click the venue value) with persistence ----------
+        function enableVenueEditing() {
+            // Find the "Venue" row's value element
+            const rows = document.querySelectorAll('.rows .row');
+            let venueValueEl = null;
+
+            rows.forEach(row => {
+                const labelEl = row.querySelector('.label');
+                const valueEl = row.querySelector('.value');
+                if (labelEl && valueEl && labelEl.textContent.trim().toLowerCase() === 'venue') {
+                    venueValueEl = valueEl;
+                }
+            });
+
+            if (!venueValueEl) return;
+
+            // Restore saved venue
+            const savedVenue = localStorage.getItem(STORAGE_KEYS.venue);
+            if (savedVenue) venueValueEl.textContent = savedVenue;
+
+            venueValueEl.style.cursor = 'pointer';
+            venueValueEl.title = 'Click to change venue';
+
+            venueValueEl.addEventListener('click', () => {
+                const currentVenue = venueValueEl.textContent.trim();
+                const nextVenue = prompt('Enter new venue name:', currentVenue);
+                if (nextVenue && nextVenue.trim()) {
+                    const clean = nextVenue.trim();
+                    venueValueEl.textContent = clean;
+                    localStorage.setItem(STORAGE_KEYS.venue, clean);
+                }
+            });
+        }
+
+        // ---------- Initialize on DOM ready ----------
         window.addEventListener('DOMContentLoaded', () => {
-            updateCurrentDateTime();
-            startCountUpTimer();
-            enableNameEditing();
-            enableLocationEditing();
-            enableProfileImageUpload();
-            setupFullscreenTrigger();
+            initCheckinTime();       // Persisted start time + live timer
+            enableTitleEditing();    // Title edit persistence
+            enableVenueEditing();    // Venue edit persistence
+            enableProfileImageUpload(); // Photo change persistence
         });
     </script>
 </body>
